application version 1.1 updated

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/codeChrono.svg" />
+    <link rel="icon" type="image/svg+xml" href="/devPulse.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CodeChrono | Session Logger</title>
+    <title>DevPulse | Session Logger</title>
   </head>
   <body>
     <div id="root"></div>
